tests/reject/genericCompatibilityOptionals.emojic
🏁 🍇
  🍰 a 🍨🐚🍬🔡
  🍦 a1 🍨 🔤Curiosity🔤 🔤Doesn’t🔤 🍆
  🍮 a a1
🍉
